# Myme

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
crates/myme-cli/: Cargo.toml
crates/myme-cli/src/: main.rs
crates/myme-core/: Cargo.toml
crates/myme-core/include/: myme.h
crates/myme-core/src/: candidate.rs  dictionary.rs  ffi.rs  learning.rs  lib.rs  romaji.rs  segmenter.rs  session.rs  user_dict.rs
data/eval/: basic.jsonl  sentence.jsonl
docs/: knowledge.md  requirement.md  ux-design.md  ux-spec.md
docs/diary/: 2026-03-15-opus.md
macos/: build.sh
macos/MymeIM/: Info.plist  myme-bridge.h
macos/MymeIM/Sources/: MymeBridge.swift  MymeInputController.swift  main.swift
tools/dict-builder/: Cargo.toml
tools/dict-builder/src/: main.rs
