[package]
name    = "myme-cli"
description = "Command-line harness for exercising the myme-core engine during development."
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
repository.workspace = true

[[bin]]
name = "myme"
path = "src/main.rs"

[dependencies]
myme-core = { path = "../myme-core" }
log      = { workspace = true }
crossterm = "0.28"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
